--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,90 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
 
+
+
+/* NAVIGATION BAR */
+nav a {
+  text-decoration: none;
+  padding: 40px;
+  color: gray;
+  
+  
+}
+
+nav a:hover {
+  color: black;
+}
+
+
+
+
+/* INNOVATION ON DEMAND/CIRCLE PICTURE SECTION */
+.innovation {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 10%;
+  padding-top: 5%;
+  position: relative;
+}
+
+.ondemand {
+  position: absolute;
+  top: 100px;
+  left: 300px;
+}
+.on {
+  padding-left: 95px;
+}
+.demand {
+  padding-left: 30px;
+}
+.ondemand h2 {
+  font-size: 60px;
+}
+.ondemand p {
+  display: flex;
+  width: 70%;
+  justify-content: flex-end;
+  /* text-align: center; */
+  padding: 7px 40px;
+  border: 1px solid black;
+}
+/* END INNOVATION ON DEMAND/CIRCLE PICTURE SECTION */
+
+
+/* MIDDLE PARAGRAPH WITH BIG PICTURE SECTION */
+.moreinfo {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.features {
+  justify-content: space-evenly;
+  width: 100%;
+}
+/* image in middle */
+.middle-img {
+  width: 100%;
+}
+/* END MIDDLE PARAGRAPH WITH BIG PICTURE SECTION */
+
+
+/*footer section */
+footer {
+  width: 100%;
+}
+address {
+  padding-top: 40px;
+  padding-bottom: 150px;
+}
+
+.copyright {
+  display: flex;
+  justify-content: center;
+  top: 230px;
+  left: 300px;
+}
+
