updated css/index.css and index.html

--- a/css/index.css
+++ b/css/index.css
@@ -1,50 +1,186 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+  max-width: 100%;
+  border: 1px solid blue;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* end of reset*/
 
-
-.conainer{
-  width: 1024px;
-  /*display:flex;  */
+.container {
+  width: 90%;
+  margin: 0 auto;
+  border: 1px solid black;
 }
 
 /* NAVIGATION BAR */
 header {
-  display:flex;
-   justify-content: center; 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   /* width: 800px; */
+}
+nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
 }
 nav a {
   text-decoration: none;
   color: gray;
-  margin-left: 60px;
-  padding: 40px;
-  font-weight: bold ;
-  
+  /* display:flex; */
+  /* padding: 40px; */
+  font-weight: bold;
 }
 
 nav a:hover {
   color: black;
 }
-
-
-
+/* END NAVIGATION BAR */
 
 /* INNOVATION ON DEMAND/CIRCLE PICTURE SECTION */
 .innovation {
   display: flex;
-  justify-content: center;
-  padding-top: 5%;
- }
+  justify-content: space-around;
+  margin-top:3%;
+}
 
- .btn {
-  margin-left: 97px;
-  
-}  
+.innovation div{
+  border: 1px solid black;
+}
+.btn{
+  display:flex;
+  justify-content:center;
+}
 
 .ondemand {
-  position: center;
-  top: 100px;
-  left: 300px;
+  
+  
 }
 .on {
   padding-left: 95px;
@@ -63,56 +199,67 @@ nav a:hover {
 }
 /* END INNOVATION ON DEMAND/CIRCLE PICTURE SECTION */
 
-
 /* MIDDLE PARAGRAPH WITH BIG PICTURE SECTION */
 .moreinfo {
   display: flex;
-  margin-left: 600px;
-  width: 800px;
+  justify-content: space-evenly;
+  margin-left: 500px;
+  width: 1100px;
   padding-top: 30px;
   padding-bottom: 30px;
 }
 
-
 /* 1st hr divider */
 .first-divide {
-  width: 800px;
-  margin-left: 600px;
-  
-} 
+  width: 1100px;
+  margin-left: 450px;
+}
 
 /* 2nd hr divider */
 .divide-two {
-  width: 800px;
-  margin-left: 600px;
+  width: 1100px;
+  margin-left: 450px;
 }
-
 
 .features {
   justify-content: space-evenly;
-  width: 100%;
+  width: 350px;
+  padding: 15px;
 }
 /* image in middle */
 .middle-img {
-  width: 800px;
-  margin-left: 600px;
+  width: 1100px;
+  margin-left: 450px;
 }
 /* END MIDDLE PARAGRAPH WITH BIG PICTURE SECTION */
-
 
 /*footer section */
 footer {
   width: 100%;
+  margin-left: 400px;
 }
 address {
   padding-top: 40px;
-  padding-bottom: 150px;
+  padding-bottom: 100px;
+  margin-left: 50px;
 }
 
 .copyright {
   display: flex;
   justify-content: center;
-  top: 230px;
-  left: 300px;
+  margin-right: 650px;
 }
 
+/* This is for tablet size browser */
+@media (max-width: 750px) {
+  body {
+    /* padding-left: 800px; */
+    background-color: red;
+  }
+
+  .innovation {
+  }
+}
+
+@media (max-width: 480px;) {
+}
