--- a/css/index.css
+++ b/css/index.css
@@ -172,14 +172,22 @@ nav a:hover {
 
 .innovation div{
   border: 1px solid black;
+  /* margin-left: 5%; */
 }
+
 .btn{
   display:flex;
   justify-content:center;
+  margin-top: 10%;
+  height: 7%;
+}
+
+.started{
+  width: 70%;
 }
 
 .ondemand {
-  
+   padding-top: 3%; 
   
 }
 .on {
@@ -204,7 +212,7 @@ nav a:hover {
   display: flex;
   justify-content: space-evenly;
   margin-left: 500px;
-  width: 1100px;
+  width: 1100px; 
   padding-top: 30px;
   padding-bottom: 30px;
 }
