final update to css/index.css

--- a/css/index.css
+++ b/css/index.css
@@ -135,7 +135,7 @@ table {
 .container {
   width: 90%;
   margin: 0 auto;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 /* NAVIGATION BAR */
@@ -171,7 +171,7 @@ nav a:hover {
 }
 
 .innovation div{
-  border: 1px solid black;
+  /* border: 1px solid black; */
   /* margin-left: 5%; */
 }
 
@@ -203,13 +203,13 @@ nav a:hover {
   display: flex;
   width: 70%;
   padding: 7px 40px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 /* END INNOVATION ON DEMAND/CIRCLE PICTURE SECTION */
 
 /* MIDDLE PARAGRAPH WITH BIG PICTURE SECTION */
 .moreinfo {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   display: flex;
   margin-left: 10%;
   width: 80%; 
@@ -228,7 +228,6 @@ nav a:hover {
 /* 2nd hr divider */
 .divide-two {
   width: 100%;
- 
 }
 
 .features {
@@ -236,7 +235,7 @@ nav a:hover {
   flex-wrap: wrap;
   justify-content: space-between;
   width: 100%; 
-   padding: 2%;
+  padding: 2%;
 }
 
 .features h3{
@@ -260,7 +259,7 @@ footer {
   /* margin-left: 400px; */
 }
 address {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   padding: 3%;
   margin-left:7.5%;
   /* padding-top: 40px; */
@@ -275,7 +274,7 @@ address h3{
 }
 
 .copyright {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   width:100%;
   display: flex;
   justify-content: space-around; 
@@ -284,10 +283,7 @@ address h3{
 
 /* This is for tablet size browser */
 @media (max-width: 800px) {
-  body {
-    
-    background-color: red;
-  }
+  
   header{
     /* display:flex; */
     flex-direction: column-reverse;
@@ -299,14 +295,41 @@ address h3{
 }
 
 @media(max-width: 500px) {
+  
+
+
   .moreinfo{
-    flex-wrap: wrap; 
+    /* flex-wrap: wrap;  */
     flex-direction: column;
   }
 
-  header nav{
+  header nav {
     flex-direction: column;
-    margin-left: 85%;
+    /* align-items: center; */
+    
+    width: 100%;
+    padding-top: 2%;
+    font-size: 20px;
+    
+    
+    
+  }
+
+  .btn {
+    height: 10%;
+      }
+
+ a {
+     /* border:1px solid grey;  */
+     padding: 4%;
+     width: 92%;
+     border-top: 1px solid grey;
+     border-bottom: 1px solid grey;
+     display:flex;
+     justify-content: center;
+     /* align-items: center; */
+
+    
     
   }
 
